--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.1",
   "private": true,
   "dependencies": {
-    "async": "^3.2.0"
-  },
-  "devDependencies": {}
+    "async": "^3.2.0",
+    "tsimportlib": "^0.0.5"
+  }
 }
